# Chatterbox-lazy-opencode

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.opencode/: cbx-speak.json
_bmad-output/analysis/: brainstorming-session-2026-01-07.md  research-2026-01-07.md
_bmad-output/implementation-artifacts/: 4-1-scaffold-plagina-cbx-speak-ts.md  4-2-event-handler-session-idle.md  4-3-shell-integration-s-cbx.md  4-4-konfiguraciya-v-opencode-json.md  code-review-2026-01-07.md  next-sprint-fix-plan-2026-01-07.md  retrospective-sprint-2-2026-01-07.md  retrospective-sprint-3-2026-01-07.md  review-to-stories-2026-01-07.md  sprint-1-checklists.md  sprint-4-backlog.md  sprint-focus-2026-01-07.md  sprint-status.yaml  synthesis-rules-2026-01-07.md  tts-adapter-design.md  tts-cli-flags.md  tts-config.md  tts-risks-fallback.md  validation-report-2026-01-07T102400.md  validation-report-2026-01-07T110340.md  validation-report-20260107-114734.md
_bmad-output/implementation-artifacts/stories/: 1-1-sintez-itogov-i-raskhozhdeniy.md  1-2-prozrachnye-tsitaty-istochniki.md  1-3-upravlenie-urovnem-detalizatsii-vyvoda.md  1-4-statusy-obrabotki.md  2-1-vklyuchenie-i-vyklyuchenie-tts.md  2-2-vybor-golosa-i-skorosti.md  2-3-ozvuchka-itogov-s-fallback.md  2-4-avto-otklyuchenie-v-ci-neinteraktive.md  2-5-integratsiya-chatterbox-tts.md  (+2 more)
_bmad-output/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  epics-user-stories.md  epics.md  opencode-integration-plan.md  prd-Chatterbox lazy opencode-2026-01-07.md  product-brief-Chatterbox lazy opencode-2026-01-07.md  research-opencode-plugin-integration.md  ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
scripts/: test_opencode_plugin.py
src/chatterbox_lazy_opencode/: __init__.py  cli.py  config.py  synthesis.py
(+1 files in other folders)
